k8s/external-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ledger-api
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: postgres
  namespace: ledger-api
subsets:
  - addresses:
      - ip: 192.168.122.245
    ports:
      - name: postgres
        port: 5432
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: ledger-api
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: redis
  namespace: ledger-api
subsets:
  - addresses:
      - ip: 192.168.122.203
    ports:
      - name: redis
        port: 6379
        protocol: TCP
