k8s/gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ledger-api-route
  namespace: ledger-api
spec:
  hostnames:
    - ledger-mm-test.vennpham.work
    - ledger-mm-test.vennpham.local
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ledger-api
          port: 8000
